--- a/index.html
+++ b/index.html
@@ -566,41 +566,23 @@ opcoesExtra.forEach(opcao => {
 
 function enviarFormulario(event) {
   event.preventDefault();
-
   const form = document.getElementById("formAnuncio");
-  const btnEnviar = form.querySelector('button[type="submit"]');
-  const btnCancelar = form.querySelector('button[type="button"]');
-
-  // Desativa os botões para evitar múltiplos cliques
-  btnEnviar.disabled = true;
-  btnEnviar.textContent = "Enviando...";
-  btnCancelar.disabled = true;
-
   const dados = Object.fromEntries(new FormData(form).entries());
 
-  // Concatena múltiplas assinaturas extras
-  const selecionados = Array.from(document.querySelectorAll('input[name="extra"]:checked'))
-                            .map(input => input.value);
-  dados.extra = selecionados.join(", ");
+  // 👇 Concatena múltiplas assinaturas extras
+const selecionados = Array.from(document.querySelectorAll('input[name="extra"]:checked'))
+                          .map(input => input.value);
+dados.extra = selecionados.join(", ");
 
-  const params = new URLSearchParams(dados).toString();
-
-  fetch(`https://script.google.com/macros/s/AKfycbwwC1b5pPAaKlkXkKkMtUteb4yG4-YbnmugdXbhXDtTxPSE_OOCvs34ivYxlD8VJhEXjg/exec?${params}`)
-    .then(res => res.text())
-    .then(msg => {
-      alert(msg);
-      form.reset();
-      voltarParaLista();
-    })
-    .catch(err => {
-      alert("Erro ao enviar o formulário.");
-    })
-    .finally(() => {
-      // Reativa os botões
-      btnEnviar.disabled = false;
-      btnEnviar.textContent = "Enviar";
-      btnCancelar.disabled = false;
-    });
+const params = new URLSearchParams(dados).toString();
+fetch(`https://script.google.com/macros/s/AKfycbwwC1b5pPAaKlkXkKkMtUteb4yG4-YbnmugdXbhXDtTxPSE_OOCvs34ivYxlD8VJhEXjg/exec?${params}`)
+  .then(res => res.text())
+  .then(msg => {
+    alert(msg);
+    form.reset();
+    voltarParaLista();
+  })
+  .catch(err => alert("Erro ao enviar o formulário."));
 }
 
 function formatarUsuario(input) {
@@ -669,9 +651,7 @@ function formatarWhatsapp(input) {
     }
 
     function registrarLike(nome, id) {
-fetch(`https://script.google.com/macros/s/AKfycbwwC1b5pPAaKlkXkKkMtUteb4yG4-YbnmugdXbhXDtTxPSE_OOCvs34ivYxlD8VJhEXjg/exec?funcao=registrarLike&nome=${encodeURIComponent(nome)}&id=
-
-${encodeURIComponent(id)}`)
+fetch(`https://script.google.com/macros/s/AKfycbwwC1b5pPAaKlkXkKkMtUteb4yG4-YbnmugdXbhXDtTxPSE_OOCvs34ivYxlD8VJhEXjg/exec?funcao=registrarLike&nome=${encodeURIComponent(nome)}&id=${encodeURIComponent(id)}`)
   .then(res => res.text())
   .then(msg => alert(msg))
   .catch(err => alert("Erro ao registrar like."));
