--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ const opcoesExtra = [
   "Adrenalina Pura", "AppleTV+", "Canais Globo", "Cindie", "Combate",
   "Crunchyroll", "Disney+", "ESPN", "GloboPlay", "Look", "Max", "MGM+",
   "MUBI", "NBA", "Nosso Futebol+", "Paramount+", "Premiere", "Reserva Imovision",
-  "Sony One", "Telecine", "UFC Fight Pass", "Universal+"
+  "Sony One", "Spotify", "Telecine", "UFC Fight Pass", "Universal+", "YouTube"
 ];
 
 function limitarKotas(input) {
