--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 
 const opcoesExtra = [
   "Adrenalina Pura", "AppleTV+", "Canais Globo", "Cindie", "Combate",
-  "Crunchyroll", "Disney+", "ESPN", "GloboPlay", "Look", "Max", "MGM+",
+  "Crunchyroll", "Disney+", "ESPN", "GloboPlay", "HBO MAX", "Look", "MGM+",
   "MUBI", "NBA", "Nosso Futebol+", "Paramount+", "Premiere", "Reserva Imovision",
   "Sony One", "Spotify", "Telecine", "UFC Fight Pass", "Universal+", "YouTube"
 ];
@@ -851,5 +851,6 @@ fetch(`https://script.google.com/macros/s/AKfycbwwC1b5pPAaKlkXkKkMtUteb4yG4-Ybnm
   <div id="menu-overlay"></div>
 </body>
 </html>
+
 
 
