--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@ fetch(`https://script.google.com/macros/s/AKfycbwwC1b5pPAaKlkXkKkMtUteb4yG4-Ybnm
 <label>Assinatura Extra (opcional):</label>
 <div id="containerExtras" class="checkbox-list"></div><br>
 
-	<label>Qual o Valor: <input type="number" min="0" step="0.25" name="valor" required></label><br>
+	<label>Qual o Valor: <input type="number" placeholder="Ex: 12,50" min="0" step="0.25" name="valor" required></label><br>
 
 	<label>Forma de Pagamento:
   	<select name="pagamento" required>
@@ -773,7 +773,7 @@ fetch(`https://script.google.com/macros/s/AKfycbwwC1b5pPAaKlkXkKkMtUteb4yG4-Ybnm
 	</label><br>
 
 <label>Código do Grupo Kotas (opcional): 
-  <input type="number" name="kotas" id="campoKotas" min="0" step="1" pattern="\d*" oninput="limitarKotas(this)">
+  <input type="number" placeholder="Ex: 123456" name="kotas" id="campoKotas" min="0" step="1" pattern="\d*" oninput="limitarKotas(this)">
 </label><br>
 
 	<label>Status da Conta:
@@ -851,6 +851,3 @@ fetch(`https://script.google.com/macros/s/AKfycbwwC1b5pPAaKlkXkKkMtUteb4yG4-Ybnm
   <div id="menu-overlay"></div>
 </body>
 </html>
-
-
-
