--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
   <base target="_top">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -521,10 +521,11 @@
 
 const opcoesExtra = [
   "Adrenalina Pura", "AppleTV+", "Canais Globo", "Cindie", "Combate",
-  "Crunchyroll", "Disney+", "ESPN", "GloboPlay", "HBO MAX", "Look", "MGM+",
-  "MUBI", "NBA", "Nosso Futebol+", "Paramount+", "Premiere", "Reserva Imovision",
-  "Sony One", "Spotify", "Telecine", "UFC Fight Pass", "Universal+", "YouTube"
+  "Crunchyroll", "Disney+", "ESPN", "GloboPlay", "HBO Max", "Look", "MGM+",
+  "MUBI", "NBA", "Netflix", "Nosso Futebol+", "Paramount+", "Premiere", 
+  "Reserva Imovision",  "Sony One", "Spotify", "Telecine", "UFC Fight Pass", "Universal+", "YouTube"
 ];
+
 
 function limitarKotas(input) {
   if (input.value.length > 6) {
@@ -851,3 +852,4 @@ fetch(`https://script.google.com/macros/s/AKfycbwwC1b5pPAaKlkXkKkMtUteb4yG4-Ybnm
   <div id="menu-overlay"></div>
 </body>
 </html>
+
