--- a/index.html
+++ b/index.html
@@ -80,9 +80,12 @@
   margin-bottom: 0.75rem;
 }
 
-.toggle-extras:hover {
+.toggle-extras:hover,
+.toggle-extras:focus {
   background-color: #fff;
   border-color: #007bff;
+  box-shadow: 0 0 0 0.15rem rgba(0, 123, 255, 0.25);
+  outline: none;
 }
 
 .hidden {
