--- a/index.html
+++ b/index.html
@@ -869,8 +869,8 @@ function toggleExtras() {
 	<label>Status da Conta:
   	<select name="status" required>
     	<option>Assinado</option>
-    	<option>Aguardando Membros</option>
-    	<option>Fila de Espera</option>
+    	<option>Aguardando</option>
+    	<option>Reservado</option>
   	</select>
 	</label><br>
 
@@ -887,8 +887,8 @@ function toggleExtras() {
 	<label>Tipo de Acesso:
   	<select name="acesso" required>
     	<option>Login e Senha</option>
+         <option>Ativar por Código</option>
     	<option>Convite por E-mail</option>
-    	<option>Ativação por Código</option>
   	</select>
 	</label><br>
 
@@ -941,4 +941,3 @@ function toggleExtras() {
   <div id="menu-overlay"></div>
 </body>
 </html>
-
