--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@ function toggleExtras() {
   	<select name="status" required>
     	<option>Assinado</option>
     	<option>Aguardando</option>
-    	<option>Reservado</option>
+    	<option>Reservando</option>
   	</select>
 	</label><br>
 
@@ -941,3 +941,4 @@ function toggleExtras() {
   <div id="menu-overlay"></div>
 </body>
 </html>
+
