--- a/index.html
+++ b/index.html
@@ -735,33 +735,41 @@ function formatarWhatsapp(input) {
   input.value = valor;
 }
 
-	function renderizarAnuncios(lista) {
+function renderizarAnuncios(lista) {
   	const container = document.getElementById("anuncios");
   	container.innerHTML = "";
   	lista.forEach(item => {
     	const div = document.createElement("div");
     	div.className = "anuncio";
     	div.innerHTML = `
-      	<img class="logo" src="${item.logo}" alt="Logo">
-      	<div class="info">
-        	<div class="titulo">${item.streaming}</div>
-        	<div class="valor">${item.valor}</div>
-      	</div>
-    	`;
+  <img class="logo" src="${item.logo}" alt="Logo">
+  <div class="info">
+    <div class="titulo">${item.streaming}</div>
+    <div class="valor">${item.valor}</div>
+    <div class="anunciante" style="display:none;">${item.anunciante}</div>
+  </div>
+`;
     	div.onclick = () => mostrarDetalhes(item);
     	container.appendChild(div);
   	});
-	}
+}
 
 	function filtrarAnuncios() {
-  	const termo = document.getElementById("pesquisa").value.toLowerCase();
-  	const anuncios = document.querySelectorAll(".anuncio");
-  	anuncios.forEach(el => {
-    	const titulo = el.querySelector(".titulo").textContent.toLowerCase();
-    	const valor = el.querySelector(".valor").textContent.toLowerCase();
-    	el.style.display = titulo.includes(termo) || valor.includes(termo) ? "flex" : "none";
-  	});
-	}
+  const termo = document.getElementById("pesquisa").value.toLowerCase();
+  const anuncios = document.querySelectorAll(".anuncio");
+  anuncios.forEach(el => {
+    const titulo = el.querySelector(".titulo").textContent.toLowerCase();
+    const valor = el.querySelector(".valor").textContent.toLowerCase();
+    const anunciante = el.querySelector(".anunciante").textContent.toLowerCase();
+    
+    el.style.display =
+      titulo.includes(termo) ||
+      valor.includes(termo) ||
+      anunciante.includes(termo)
+        ? "flex"
+        : "none";
+  });
+}
 
 	function toggleMenu() {
   	const painel = document.getElementById("painel-menu");
@@ -976,6 +984,7 @@ if (termoPesquisa) {
   <div id="menu-overlay"></div>
 </body>
 </html>
+
 
 
 
