--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@ fetch(`https://script.google.com/macros/s/AKfycbwwC1b5pPAaKlkXkKkMtUteb4yG4-Ybnm
       	<p><strong>💵 ${item.valor}</strong></p>
       	<p><strong>📌 ${item.vagas}</strong></p>
       	<p><strong>🔐 ${item.login}</strong></p>
-          ${item.oferta ? `<p><strong>⏰ OFERTA</strong> - ${item.oferta}</p>` : ""}
+          ${item.oferta ? `<p><strong>⏰ OFERTA - ${item.oferta}</strong></p>` : ""}
       	<hr>
       	<p><strong>Postado em: ${item.data}</strong></p>
       	<hr>
