--- a/index.html
+++ b/index.html
@@ -432,12 +432,17 @@
   	z-index: 150;
 	}
 
-	.detalhes-box p {
+    .detalhes-box p {
     color: #333;
   	margin: 0;
-  	line-height: 1.4;
+  	line-height: 1;
   	font-size: 2vw;
 	}
+
+    .detalhes-box p strong {
+  	display: inline-block;
+ 	word-break: break-word;
+    }
 
 	.detalhes-box hr {
   	width: 100%;
@@ -1002,4 +1007,5 @@ if (termoPesquisa) {
   <div id="menu-overlay"></div>
 </body>
 </html>
+
 
