--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
 
     .detalhes-box p {
     color: #333;
-  	margin: 0;
-  	line-height: 0.5;
+  	margin-bottom: 1rem;
+  	line-height: 0.8;
   	font-size: 2vw;
 	}
 
@@ -1007,6 +1007,7 @@ if (termoPesquisa) {
   <div id="menu-overlay"></div>
 </body>
 </html>
+
 
 
 
