--- a/index.html
+++ b/index.html
@@ -434,15 +434,10 @@
 
     .detalhes-box p {
     color: #333;
-    margin-bottom: 0.2rem;
-  	line-height: 1.2;
+    margin: 0;
+  	line-height: 0.5;
   	font-size: 2vw;
 	}
-
-    .detalhes-box p strong {
-  	display: inline-block;
- 	word-break: break-word;
-    }
 
 	.detalhes-box hr {
   	width: 100%;
@@ -1007,6 +1002,7 @@ if (termoPesquisa) {
   <div id="menu-overlay"></div>
 </body>
 </html>
+
 
 
 
