--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@ fetch(`https://script.google.com/macros/s/AKfycbwwC1b5pPAaKlkXkKkMtUteb4yG4-Ybnm
       	</a>
       	<hr>
       	<p><strong>📺 ${item.streaming}</span></strong></p>
-      	${item.streamingExtra ? `<p><strong>➕ ${item.streamingExtra}</strong></p>` : ""}
+      	${item.streamingExtra ? `<p style="line-height: 1.4em;"><strong>➕ ${item.streamingExtra}</strong></p>` : ""}
       	<p><strong>💵 ${item.valor}</strong></p>
       	<p><strong>📌 ${item.vagas}</strong></p>
       	<p><strong>🔐 ${item.login}</strong></p>
@@ -1002,6 +1002,7 @@ if (termoPesquisa) {
   <div id="menu-overlay"></div>
 </body>
 </html>
+
 
 
 
